--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr" xml:lang="fr" >
+
 <head>
   <meta charset="utf-8">
   <title>PatrickLaumond</title>
